# image-indexer

./: .gitignore  Cargo.toml  README.md
config/: default.toml  local.toml
src/: config.rs  error.rs  indexer.rs  main.rs  metadata.rs  processor.rs  search.rs  walker.rs  web_server.rs
src/search_clients/: elasticsearch.rs  mod.rs  tantivy.rs
static/: app.js  index.html  style.css
