[package]
name = "image_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
walkdir = "2.3"
exif = { package = "kamadak-exif", version = "0.5.4" }
image = "0.24"
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
rayon = "1.5"
env_logger = "0.9"
log = "0.4"
config = "0.13"
thiserror = "1.0"
lazy_static = "1.4.0"
tantivy = "0.19"
async-trait = "0.1"
futures = "0.3"
url = "2.2"
actix-web = "4"
actix-files = "0.6"
